[package]
name = "chimera-policy-testdrive"
version = "0.1.0"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wapc = "0.10.1"
wasmtime-provider = "0.0.2"
